# AI-lawyer

./: .env  .env.example  .gitignore  README.md  docker-compose.deploy.yaml  docker-compose.yaml  main.py  requirements.txt
app/: graph.py
backend/: Database.py  DatabaseModels.py  Dockerfile  README.md  RequestModels.py  entrypoint.sh  logger.py  main.py  pyproject.toml
backend/admin/: endpoints.py  queries.py
backend/app/: logger.py  main.py
backend/app/admin/: RequestModels.py  queries.py
backend/app/chat/: RequestModels.py  endpoints.py  queries.py
backend/app/db/: Database.py
backend/app/dependencies/: dependencies.py
backend/app/documents/: endpoints.py  queries.py
backend/app/user/: RequestModels.py  queries.py  tokenService.py
backend/chat/: RequestModels.py  endpoints.py  queries.py
backend/db/: Database.py  DatabaseModels.py
backend/dependencies/: dependencies.py
backend/documents/: RequestModels.py  endpoints.py  queries.py
backend/migrations/: env.py
backend/migrations/versions/: 0c04c10648c7_initial.py
backend/statistics/: endpoints.py
backend/user/: RequestModels.py  endpoints.py  queries.py
claims_agent/: config.py  graph.py
frontend/: Dockerfile  agreement.html  index.html  privacy.html
libs/logger/: logger.py  pyproject.toml
libs/logger/src/logger/: __init__.py
nginx/: nginx.conf
output/: isk_dolg.docx  (+2 more)
src/chat_test_server/: Dockerfile  pyproject.toml  requirements.txt
src/chat_test_server/app/: main.py
src/chat_test_server/app/api/v1/: router.py
src/chat_test_server/app/api/v1/endpoints/: chat.py
src/chat_test_server/app/core/: settings.py
src/chat_test_server/app/schemas/: chat.py
src/chat_test_server/app/services/: agent_client.py  chat_service.py
src/chat_test_server/app/web/: app.js  index.html  styles.css
src/inference_server/: Dockerfile  README.md  __init__.py  docker-compose.yml  main.py  pyproject.toml
src/inference_server/api/: routes.py
src/inference_server/app/: main.py
src/inference_server/app/api/: routes.py
src/inference_server/app/core/: settings.py
src/inference_server/app/schemas/: __init__.py  chat.py
src/inference_server/app/services/: __init__.py  agent_service.py
src/inference_server/app/services/agent_service/: agent_service.py
src/inference_server/app/services/agent_service/agents/: __init__.py  claims_agent.py  contract_agent.py  general_questions_agent.py  router_agent.py
src/inference_server/app/services/agents/: __init__.py  base.py  claims_agent.py  contract_agent.py  general_agent.py  general_questions_agent.py  router_agent.py  simple_agent.py
src/inference_server/app/services/llm_service/: llm_service.py  prompts.py
src/inference_server/services/: agent_service.py
src/inference_server/services/agents/: contract_agent.py  router_agent.py
(+181 files in other folders)
