[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.135.1",
    "pwdlib[argon2]>=0.3.0",
    "pyjwt>=2.12.1",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.48",
]
