[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "libs-logger"
version = "0.1.0"
description = "Internal logging library"
requires-python = ">=3.11"

dependencies = [
    "python-json-logger>=2.0.7"
]

[tool.setuptools.packages.find]
where = ["src"]