[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chat-test-service"
version = "0.1.0"
description = "Minimal FastAPI chat service for testing LangGraph inference server"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "httpx>=0.27,<1.0",
    "pydantic>=2.8,<3.0",
    "pydantic-settings>=2.3,<3.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]